kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wildryde-service
spec:
  type: LoadBalancer
  selector:
    app: wildryde
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
